@@ -12,8 +12,18 @@
 	<packaging>war</packaging>
 	
 	<name>kitty-vaadin</name>
-
 	<description>Kitty Vaadin GUI</description>
+	
+	<properties>
+		<vaadin.version>7.1.9</vaadin.version>
+	</properties>
+	
+	<repositories>
+		<repository>
+			<id>vaadin-addons</id>
+			<url>http://maven.vaadin.com/vaadin-addons</url>
+		</repository>
+	</repositories>
 	
 	<dependencies>
 
@@ -29,22 +39,47 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.google.gwt</groupId>
-			<artifactId>gwt-user</artifactId>
-			<version>2.4.0</version>
-			<scope>provided</scope>
+			<groupId>com.vaadin</groupId>
+			<artifactId>vaadin-themes</artifactId>
+			<version>${vaadin.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>commons-logging</groupId>
+					<artifactId>commons-logging</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<dependency>
 			<groupId>com.vaadin</groupId>
-			<artifactId>vaadin</artifactId>
-			<version>6.8.3</version>
+			<artifactId>vaadin-client-compiled</artifactId>
+			<version>${vaadin.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>commons-logging</groupId>
+					<artifactId>commons-logging</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
-	
+
 		<dependency>
-			<groupId>org.dellroad</groupId>
-			<artifactId>dellroad-stuff-vaadin</artifactId>
-			<version>1.0.420</version>
+			<groupId>com.vaadin</groupId>
+			<artifactId>vaadin-client</artifactId>
+			<version>${vaadin.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>commons-logging</groupId>
+					<artifactId>commons-logging</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+		<!-- <dependency> <groupId>com.vaadin</groupId> <artifactId>vaadin-push</artifactId> 
+			<version>${vaadin.version}</version> </dependency> -->
+		<dependency>
+			<groupId>ru.xpoft.vaadin</groupId>
+			<artifactId>spring-vaadin-integration</artifactId>
+			<version>2.0.2</version>
 		</dependency>
 
 		<dependency>
@@ -58,6 +93,20 @@
 			<artifactId>logback-classic</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>net.anthavio.maven</groupId>
+			<artifactId>jetty-essentials</artifactId>
+			<type>pom</type>
+			<scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>net.anthavio</groupId>
+			<artifactId>anthavio-sewer</artifactId>
+			<scope>test</scope>
+		</dependency>
+		
 		
 	</dependencies>
 
@@ -83,41 +132,32 @@
 				</plugin>
 				
 				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>gwt-maven-plugin</artifactId>
-					<version>2.4.0</version>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
 					<configuration>
-						<webappDirectory>${project.build.directory}/${project.build.finalName}/VAADIN/widgetsets</webappDirectory>
-						<extraJvmArgs>-Xmx512M -Xss1024k</extraJvmArgs>
-						<runTarget>clean</runTarget>
-						<hostedWebapp>${project.build.directory}/${project.build.finalName}</hostedWebapp>
-						<noServer>true</noServer>
-						<port>8080</port>
-						<soyc>false</soyc>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>com.vaadin</groupId>
+										<artifactId>vaadin-maven-plugin</artifactId>
+										<versionRange>[0.0.1,)</versionRange>
+										<goals>
+											<goal>resources</goal>
+											<goal>update-widgetset</goal>
+											<goal>compile</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore/>
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
 					</configuration>
-					<executions>
-						<execution>
-							<goals>
-								<goal>resources</goal>
-								<goal>compile</goal>
-							</goals>
-						</execution>
-					</executions>
 				</plugin>
 				
-				<plugin>
-					<groupId>com.vaadin</groupId>
-					<artifactId>vaadin-maven-plugin</artifactId>
-					<version>1.0.2</version>
-					<executions>
-						<execution>
-							<phase>install</phase>
-							<goals>
-								<goal>update-widgetset</goal>
-							</goals>
-						</execution>
-					</executions>
-				</plugin>
 			</plugins>
 		</pluginManagement>
 		
@@ -151,170 +191,57 @@
 					</aspectLibraries>
 				</configuration>
 			</plugin>
-<!--
+
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-site-plugin</artifactId>
+				<groupId>com.vaadin</groupId>
+				<artifactId>vaadin-maven-plugin</artifactId>
+				<version>${vaadin.version}</version>
 				<configuration>
-					<reportPlugins>
-
-						<plugin>
-							<groupId>org.apache.maven.plugins</groupId>
-							<artifactId>maven-project-info-reports-plugin</artifactId>
-							<reports>
-								<report>index</report>
-								<report>summary</report>
-								<report>cim</report>
-								<report>scm</report>
-								<report>project-team</report>
-								<report>issue-tracking</report>
-								<report>dependency-management</report>
-								<report>dependency-convergence</report>
-								<report>dependencies</report>
-								<report>plugin-management</report>
-								<report>plugins</report>
-							</reports>
-						</plugin>
-
-						<plugin>
-							<groupId>de.smartics.maven.plugin</groupId>
-							<artifactId>maven-buildmetadata-plugin</artifactId>
-							<reports>
-								<report>buildmetadata-report</report>
-							</reports>
-						</plugin>
-						
-						<plugin>
-							<groupId>org.apache.maven.plugins</groupId>
-							<artifactId>maven-surefire-report-plugin</artifactId>
-							<reports>
-								<report>report-only</report>
-							</reports>
-						</plugin>
-						
-						<plugin>
-							<groupId>org.apache.maven.plugins</groupId>
-							<artifactId>maven-changes-plugin</artifactId>
-							<configuration>
-								<xmlPath>${basedir}/src/changes.xml</xmlPath>
-							</configuration>
-							<reports>
-								<report>changes-report</report>
-							</reports>
-						</plugin>
-						
-						<plugin>
-							<groupId>org.apache.maven.plugins</groupId>
-							<artifactId>maven-changelog-plugin</artifactId>
-						</plugin>
-
-						<plugin>
-							<groupId>org.apache.maven.plugins</groupId>
-							<artifactId>maven-javadoc-plugin</artifactId>
-							<configuration>
-								<quiet>true</quiet>
-								<encoding>${project.build.sourceEncoding}</encoding>
-								<docencoding>${project.build.sourceEncoding}</docencoding>
-							</configuration>
-						</plugin>
-			
-						<plugin>
-							<groupId>org.apache.maven.plugins</groupId>
-							<artifactId>maven-jxr-plugin</artifactId>
-							<configuration>
-								<inputEncoding>${project.build.sourceEncoding}</inputEncoding>
-								<outputEncoding>${project.build.sourceEncoding}</outputEncoding>
-							</configuration>
-						</plugin>
-						
-						<plugin>
-							<groupId>org.codehaus.mojo</groupId>
-							<artifactId>taglist-maven-plugin</artifactId>
-							<configuration>
-								<encoding>${project.build.sourceEncoding}</encoding>
-								<testXrefLocation>${project.reporting.outputDirectory}/xref</testXrefLocation>
-								<tagListOptions>
-									<tagClasses>
-										<tagClass>
-											<displayName>Code Work</displayName>
-											<tags>
-												<tag>
-													<matchString>FIXME</matchString>
-													<matchType>exact</matchType>
-												</tag>
-												<tag>
-													<matchString>TODO</matchString>
-													<matchType>exact</matchType>
-												</tag>
-												<tag>
-													<matchString>XXX</matchString>
-													<matchType>exact</matchType>
-												</tag>
-											</tags>
-										</tagClass>
-									</tagClasses>
-								</tagListOptions>
-							</configuration>
-						</plugin>
-
-						<plugin>
-							<groupId>org.codehaus.mojo</groupId>
-							<artifactId>jdepend-maven-plugin</artifactId>
-						</plugin>
-						
-						<plugin>
-							<groupId>org.apache.maven.plugins</groupId>
-							<artifactId>maven-pmd-plugin</artifactId>
-							<configuration>
-								<targetJdk>1.5</targetJdk>
-								<format>xml</format>
-								<linkXref>true</linkXref>
-								<sourceEncoding>${project.build.sourceEncoding}</sourceEncoding>
-								<minimumTokens>100</minimumTokens>
-								<rulesets>
-									<ruleset>/rulesets/basic.xml</ruleset>
-									<ruleset>/rulesets/unusedcode.xml</ruleset>
-								</rulesets>
-								<excludeRoots>
-									<excludeRoot>target/generated-sources</excludeRoot>
-									<excludeRoot>target/jsp-source</excludeRoot>
-								</excludeRoots>
-							</configuration>
-							<reportSets>
-								<reportSet>
-									<reports>
-										<report>pmd</report>
-										<report>cpd</report>
-									</reports>
-								</reportSet>
-							</reportSets>
-						</plugin>
-						
-						<plugin>
-							<groupId>org.codehaus.mojo</groupId>
-							<artifactId>findbugs-maven-plugin</artifactId>
-							<configuration>
-								<effort>Max</effort>
-								<threshold>Low</threshold>
-							</configuration>
-						</plugin>
-
-						<plugin>
-							<groupId>net.sf</groupId>
-							<artifactId>stat-scm</artifactId>
-							<configuration>
-								<skip>${stat-scm.skip}</skip>
-								<excludes>
-									<exclude>**/*.doc</exclude>
-									<exclude>**/*.xls</exclude>
-								</excludes>
-							</configuration>
-						</plugin>
-								
-					</reportPlugins>
+					<extraJvmArgs>-Xms256m -Xmx512m -Xss1024k -XX:MaxPermSize=256m</extraJvmArgs>
+					<!-- We are doing "inplace" but into subdir VAADIN/widgetsets. This way compatible with Vaadin eclipse plugin. -->
+					<webappDirectory>${basedir}/src/main/webapp/VAADIN/widgetsets</webappDirectory>
+					<hostedWebapp>${basedir}/src/main/webapp/VAADIN/widgetsets</hostedWebapp>
+					<noServer>true</noServer>
+					<!-- Remove draftCompile when project is ready -->
+					<draftCompile>false</draftCompile>
+					<compileReport>true</compileReport>
+					<style>OBF</style>
+					<strict>true</strict>
+					<runTarget>http://localhost:8080/</runTarget>
+				</configuration>
+				<executions>
+					<execution>
+						<configuration>
+							<!-- <modules> -->
+							<!-- <module>org.vaadin.aceeditor.demo.AceEditorDemoWidgetSet</module> -->
+							<!-- </modules> -->
+						</configuration>
+						<goals>
+							<goal>resources</goal>
+							<!--
+							<goal>update-widgetset</goal>
+							-->
+							<goal>compile</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+	
+			<!-- As we are doing "inplace" GWT compilation, ensure the widgetset directory is cleaned properly -->
+			<plugin>
+				<artifactId>maven-clean-plugin</artifactId>
+				<configuration>
+					<failOnError>true</failOnError>
+					<filesets>
+						<fileset>
+							<directory>src/main/webapp/VAADIN/widgetsets</directory>
+						</fileset>
+						<fileset>
+							<directory>src/main/webapp/VAADIN/gwt-unitCache</directory>
+						</fileset>
+					</filesets>
 				</configuration>
 			</plugin>
--->			
 		</plugins>
 
 	</build>
